Add some scripts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>poolparty</title>
   </head>
   <body>
-    <app></app>
+    <section id="app">
+      <app></app>
+    </section>
+    
     <!-- built files will be auto injected -->
+    <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-database.js"></script>
   </body>
 </html>
