--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-database.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   </body>
 </html>
