--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <title>poolparty</title>
   </head>
   <body>
-    <section id="app">
-      <app></app>
-    </section>
-    
+    <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase-auth.js"></script>
